updates to workflow

--- a/preprocgre_bruker/config/snakebids.yml
+++ b/preprocgre_bruker/config/snakebids.yml
@@ -26,10 +26,11 @@ pybids_inputs:
     filters:
       suffix: 'GRE'
       extension: '.nii.gz'
-      part: 
-        - 'real'
-        - 'imag'
       datatype: 'anat'
+      part:
+        - real
+        - imag
+        - mag
     wildcards:
       - subject
       - session
